# codectx

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  DECISIONS.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml  publish.yml
docs/: astro.config.mjs  build_output.txt  package-lock.json  package.json  tsconfig.json
docs/src/content/docs/: comparison.md  index.mdx
docs/src/content/docs/advanced/: dependency-graph.md  ranking-system.md  token-compression.md
docs/src/content/docs/community/: contributing.md  faq.md
docs/src/content/docs/getting-started/: basic-usage.md  installation.md  quick-start.mdx
docs/src/content/docs/guides/: best-practices.md  configuration.md  docker.md  using-context-effectively.md
docs/src/content/docs/introduction/: what-is-codectx.md  why-it-exists.md
docs/src/content/docs/reference/: architecture-overview.md  cli-reference.md
docs/src/styles/: custom.css
src/codectx/: __init__.py  cache.py  cli.py  ignore.py  llm.py  safety.py  walker.py
src/codectx/cache/: cache.py  manifest.py  paths.py
src/codectx/compressor/: budget.py  summarizer.py  tiered.py
src/codectx/config/: defaults.py  loader.py
src/codectx/graph/: builder.py  resolver.py
src/codectx/output/: formatter.py  sections.py
src/codectx/parser/: base.py  languages.py  treesitter.py
src/codectx/parser/queries/: go.scm  java.scm  javascript.scm  python.scm  rust.scm  typescript.scm
src/codectx/ranker/: git_meta.py  scorer.py  semantic.py
tests/: test_compressor.py  test_ignore.py  test_integration.py  test_parser.py  test_scorer.py  test_walker.py
tests/integration/: test_analyze_json.py  test_analyze_llm.py  test_cache_integration.py  test_watch_integration.py
tests/unit/: test_cache.py  test_cache_export.py  test_cache_wiring.py  test_call_paths.py  test_cli.py  test_config_filter.py  test_constants_summary.py  test_cycles.py  test_embedding_cache.py  test_formatter_coverage.py  test_formatter_sections.py  test_git_meta.py  test_go_resolver.py  test_help_output.py  test_json_output.py  test_llm_summarize.py  test_multi_root.py  test_queries.py  test_resolver.py  test_safety.py  test_semantic.py  test_semantic_mock.py  test_summarizer.py  test_symbol_xref.py  test_treesitter.py  test_version.py  test_watch_debounce.py
