[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codectx"
version = "0.1.0"
description = "Codebase context compiler for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Granth" }]
keywords = ["ai", "context", "codebase", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-ruby>=0.23",
    "rustworkx>=0.15",
    "pygit2>=1.14",
    "tiktoken>=0.7",
    "typer>=0.12",
    "rich>=13.0",
    "pathspec>=0.12",
    "watchfiles>=0.21",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.25",
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
codectx = "codectx.cli:app"

[project.urls]
Repository = "https://github.com/yourusername/codectx"
Issues = "https://github.com/yourusername/codectx/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/codectx"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=codectx --cov-report=term-missing"

[tool.coverage.run]
source = ["src/codectx"]
