[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codectx"
version = "0.1.3"
description = "Codebase context compiler for AI agents"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Granth" }]
keywords = ["ai", "context", "codebase", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
]
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-ruby>=0.23",
    "rustworkx>=0.15",
    "pygit2>=1.14",
    "tiktoken>=0.7",
    "typer>=0.12",
    "rich>=13.0",
    "pathspec>=0.12",
    "watchfiles>=0.21",
    "tomli>=2.0; python_version < '3.11'",
    "tomli>=2.4.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.25",
    "openai>=1.0",
]
semantic = [
    "lancedb>=0.6",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "vulture>=2.15",
]

[project.scripts]
codectx = "codectx.cli:app"

[project.urls]
Homepage = "https://github.com/hey-granth/codectx"
Repository = "https://github.com/hey-granth/codectx"
Issues = "https://github.com/hey-granth/codectx/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/codectx"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
warn_unused_ignores = true
strict = true

[[tool.mypy.overrides]]
module = [
    "tomllib",
    "openai",
    "anthropic",
    "lancedb",
    "sentence_transformers",
    "pygit2",
    "tomli",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=codectx --cov-report=term-missing"

[tool.coverage.run]
source = ["src/codectx"]

[dependency-groups]
dev = [
    "build>=1.4.0",
]
